Fix light/dark mode details transition

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,7 +59,7 @@ body {
       .screen-results {
         opacity: 1;
 
-        transition: all 0.4s ease-in-out;
+        transition: opacity 0.4s ease-in-out;
       }
     }
   }
